Suppress -Warray-bounds warning spam in Bitmap.h https://bugs.webkit.org/show_bug.cgi?id=224207

Patch by Michael Catanzaro <mcatanzaro@gnome.org> on 2021-04-07
Reviewed by Don Olmstead.

Suppress this warning.

* wtf/Bitmap.h:
(WTF::WordType>::clear):

Canonical link: https://commits.webkit.org/236283@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275646 268f45cc-cd09-0410-ab3c-d52691b4dbfc