Source/WTF/wtf/Bitmap.h
@@ -226,7 +226,9 @@ ALWAYS_INLINE bool Bitmap<bitmapSize, WordType>::concurrentTestAndClear(size_t n
 template<size_t bitmapSize, typename WordType>
 inline void Bitmap<bitmapSize, WordType>::clear(size_t n)
 {
+IGNORE_WARNINGS_BEGIN("array-bounds")
     bits[n / wordSize] &= ~(one << (n % wordSize));
+IGNORE_WARNINGS_END
 }
 
 template<size_t bitmapSize, typename WordType>
